--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -25,3 +25,62 @@
   background-size: cover;
   background-position: center;
 }
+.search-form {
+  background-color:#325aa8 ;
+  text-align: center;
+}
+.load-more{
+  background-color:#325aa8;
+  display: block;
+  margin:15px auto;
+  padding: 4px 15px;
+  border-radius: 10px;
+  color: #fff;
+}
+:root {
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --animation-duration: 250ms;
+}
+
+.gallery {
+  display: grid;
+  max-width: 1140px;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-auto-rows: 240px;
+  grid-gap: 12px;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  // list-style-type: none;
+}
+
+.photo-card {
+  // position: relative;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+}
+
+.gallery__image:hover {
+  transform: scale(1.03);
+}
+
+.gallery__image {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  transition: transform var(--animation-duration) var(--timing-function);
+}
+.info {
+  display: flex;
+  justify-content: space-around;
+}
+.gallery__item {
+  position: relative;
+  display: block;
+  flex-grow: 1;
+}
